Rewrote CLEVR experiments section.

--- a/cvpr_submission/bibliography.bib
+++ b/cvpr_submission/bibliography.bib
@@ -682,4 +682,21 @@
 	year={2018},
 	organization={IEEE}
 }
+
+@inproceedings{guo2018dynamic,
+	title={Dynamic task prioritization for multitask learning},
+	author={Guo, Michelle and Haque, Albert and Huang, De-An and Yeung, Serena and Fei-Fei, Li},
+	booktitle={Proceedings of the European Conference on Computer Vision (ECCV)},
+	pages={270--287},
+	year={2018}
+}
+
+@inproceedings{kendall2018multi,
+	title={Multi-task learning using uncertainty to weigh losses for scene geometry and semantics},
+	author={Kendall, Alex and Gal, Yarin and Cipolla, Roberto},
+	booktitle={Proceedings of the IEEE Conference on Computer Vision and Pattern Recognition},
+	pages={7482--7491},
+	year={2018}
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
