--- a/cvpr_submission/paper_main.tex
+++ b/cvpr_submission/paper_main.tex
@@ -156,7 +156,7 @@ Thomas J. Watson Research Center, Yorktown Heights, NY 10598, USA\\
 \bibliography{bibliography}
 }
 
-\newpage
+\clearpage
 \input{appendix}
 
 \end{document}
