--- a/cvpr_submission/appendix.tex
+++ b/cvpr_submission/appendix.tex
@@ -1,1 +1,73 @@
-\section{Appendix}
+\section{Supplementary Material}
+
+\subsection{Complete CLEVR-CoGenT results}
+\label{sec:full-cogent-results}
+
+\begin{table}[ht]
+	\centering
+
+	\caption{Complete set of results for SAMNet on CLEVR-CoGenT.}\label{tab:CoGenT-results}
+	\begin{adjustbox}{width=0.99\textwidth}
+		\begin{tabular}{c c c c c c c }\toprule
+			\multicolumn{1}{c }{\textbf{}} & \multicolumn{6}{c }{\textbf{Test Accuracy (\%)}} \\  
+			\multicolumn{1}{c }{\textbf{}} & \multicolumn{6}{c }{on \texttt{valA} -- 150,000 samples} \\ 
+			\cmidrule(lr){2-7}
+			\multicolumn{1}{ c }{\textbf{Experiments}} & \textbf{Overall}& \textbf{Exist}  & \textbf{Count} & \textbf{CompareInteger} & \textbf{CompareAttribute} & \textbf{QueryAttribute}\\ 
+			\cmidrule(lr){1-1}
+			\cmidrule(lr){2-7}
+			\multicolumn{1}{ c }{Exist only} & 26.07 & \emph{74.20}	& 0.0	& 59.79	& 59.15 & 0.0 \\ 
+			\multicolumn{1}{ c }{Count only} & 14.89  & 0.0	& \emph{62.78}	& 0.0 & 0.0 & 0.0 \\ 
+			\multicolumn{1}{ c }{CompareInteger only} & 23.44 & 48.15	& 0.0	& \emph{77.98}	& 54.08 & 0.0 \\ 
+			\multicolumn{1}{ c }{CompareAttribute only} & 23.50 & 51.93	& 0.0 & 59.06 & \emph{61.73} & 0.0 \\ 
+			\multicolumn{1}{ c }{QueryAttribute only} & 34.64 	& 0.0	& 0.0	& 0.0 & 0.0 & \emph{97.08} \\ 		
+			\cmidrule(lr){1-1}
+			\cmidrule(lr){2-7}
+			
+			\multicolumn{1}{ c }{All tasks} & 95.32 & 98.4 	& 86.75	& 96.0	& 98.65	& 98.02 \\ 
+			\cmidrule(lr){1-1}
+			\cmidrule(lr){2-7}
+			
+			\multicolumn{1}{ c }{All tasks but Exist} & 90.33 	& \emph{60.42}	& 86.12	& 96.18	& 98.52 & 98.60 \\ 
+			\multicolumn{1}{ c }{All tasks but Count} & 74.59 	& 97.51	& \emph{0.0}	& 94.37	& 98.42 & 98.47 \\ 
+			\multicolumn{1}{ c }{All tasks but CompareInteger} & 91.53 	& 98.22	& 86.09	& \emph{56.35}	& 98.78 & 98.40 \\ 
+			\multicolumn{1}{ c }{All tasks but CompareAttribute} & 81.92 	& 98.32	& 86.36	& 95.86	& \emph{23.18} & 98.44 \\ 
+			\multicolumn{1}{ c }{All tasks but QueryAttribute} & 42.17 	& 76.79	& 54.64	& 79.87 & 64.13 & \emph{0.0} \\ 
+			
+			\cmidrule(lr){1-1}
+			\cmidrule(lr){2-7}
+			
+			\multicolumn{1}{ c }{\textit{Trained on all tasks -- Finetune on $t$}} & &  & &  & &\\ 
+			\multicolumn{1}{ c }{Exist} & 94.16 & \emph{98.04} & 82.96 & 95.02 & 98.12 & 97.97 \\ 
+			\multicolumn{1}{ c }{Count} & 95.10 & 96.46 & \emph{88.28} & 94.78 & 97.01 & 98.26 \\
+			\multicolumn{1}{ c }{CompareInteger} & 95.31 & 98.39 & 86.56 & \emph{96.07} & 98.70 & 98.09 \\
+			\multicolumn{1}{ c }{CompareAttribute} & 95.31 & 98.40 & 86.78 & 96.00 & \emph{98.66} & 98.04 \\
+			\multicolumn{1}{ c }{QueryAttribute} & 93.49 & 97.45 & 82.09 & 92.23 & 97.85& \emph{97.76} \\
+			
+			\bottomrule
+		\end{tabular}
+	\end{adjustbox}
+\end{table}
+
+%\begin{table}[htb]
+%	\centering
+%	\noindent
+%	\begin{adjustbox}{width=0.5\textwidth}
+%		\begin{tabular}{c c c c c c c }\toprule
+%			\multicolumn{1}{c }{\textbf{}} & \multicolumn{6}{c }{\textbf{Test Accuracy (\%)}} \\  
+%			\multicolumn{1}{c }{\textbf{}} & \multicolumn{6}{c }{on \texttt{valA} -- 150,000 samples} \\ 
+%			\cmidrule(lr){2-7}
+%			\multicolumn{1}{ c }{\textbf{Experiments}} & \textbf{Overall}& \textbf{Exist}  & \textbf{Count} & \textbf{CompareInteger} & \textbf{CompareAttribute} & \textbf{QueryAttribute}\\ 
+%			\cmidrule(lr){1-1}
+%			\cmidrule(lr){2-7}
+%
+%			\multicolumn{1}{ c }{\textbf{Trained on all tasks but $t$ -- Finetune on $t$ }} & &  & &  & &\\ 
+%			\multicolumn{1}{ c }{Exist} & 86.24 & 98.04 & 56.59 & 87.99 & 94.17 & 97.14 \\ 
+%			\multicolumn{1}{ c }{Count} & 46.97 & 2.80 & 78.73 & 15.60 & 35.06 & 56.60 \\
+%			\multicolumn{1}{ c }{CompareInteger} & 73.46 & 72.89 & 42.42 & 92.07 & 68.32 & 91.90 \\
+%			\multicolumn{1}{ c }{CompareAttribute} & 48.16 & 85.77 & 30.84 & 77.20 & 97.72 & 13.21 \\
+%			\multicolumn{1}{ c }{QueryAttribute} & 35.26 & 38.65 & 4.22 & 31.56 & 5.08 & 70.67 \\
+%			\bottomrule
+%		\end{tabular}
+%	\end{adjustbox}
+%	\caption{CoGenT accuracies with finetuning.}\label{tab:CoGenT-finetuning-results}
+%\end{table}
