--- a/cvpr_submission/paper_main.tex
+++ b/cvpr_submission/paper_main.tex
@@ -4,6 +4,7 @@
 \usepackage{times}
 \usepackage{epsfig}
 \usepackage{graphicx}
+\usepackage{subcaption}
 \usepackage{amsmath, amssymb, amsfonts,bm}
 \usepackage{amsthm}
 
