--- a/cvpr_submission/appendix.tex
+++ b/cvpr_submission/appendix.tex
@@ -1,11 +1,110 @@
 \section{Supplementary Material}
 
+\subsection{Datasets: COG \& CLEVR-CoGenT}
+\label{sec:datasets-desc}
+
+\begin{table}[ht]
+	\caption{Details of the Canonical and Hard variants of the COG dataset}
+	\centering
+	\begin{adjustbox}{width=0.5\textwidth}
+	\begin{tabular}{lcccccc}
+		\toprule
+		Variant    &  	number &  	maximum & maximum & size & size & size  \\ 
+		& of   & memory & number of & of & of & of  \\
+		& frames & duration & distractors & training set & validation set & test set \\
+		\midrule
+		Canonical & 4 & 3 & 1 & 10000320 & 500016 & 500016 \\	
+		Hard  & 8 & 7 & 10 & 10000320 & 500016  & 500016 \\
+		\bottomrule	
+	\end{tabular}
+	\end{adjustbox}
+	\label{tab:cog_variants}
+\end{table}
+
+\begin{table}[ht]
+	\caption{Colors \& shapes combinations present in CoGenT-A \& -B datasets.}
+	\label{tab:cogent_conditions}
+	\centering
+	\begin{adjustbox}{width=0.5\textwidth}
+	\begin{tabular}{cccc}
+		\toprule
+		Dataset        & Cubes              & Cylinders &  Spheres         \\
+		\midrule
+		CoGenT A & gray / blue / brown / yellow  & red / green / purple / cyan       &    any color  \\
+		CoGenT B  & red / green / purple / cyan &   gray / blue / brown / yellow       &      any color  \\
+		\bottomrule
+	\end{tabular}
+	\end{adjustbox}
+\end{table}
+
+The CoGenT dataset contains:
+\begin{itemize}
+	\item Training set of 70,000 images and 699,960 questions in Condition A,
+	\item	Validation set of 15,000 images and 149,991 questions in Condition A,
+	\item	Test set of 15,000 images and 149,980 questions in Condition A (without answers),
+	\item	Validation set of 15,000 images and 150,000 questions in Condition B,
+	\item	Test set of 15,000 images and 149,992 questions in Condition B (without answers),
+%	\item	Scene graphs and functional programs for all training/validation images/questions.
+\end{itemize}
+
+\subsection{Complete COG results}
+\label{sec:cog-all-results}
+
+\begin{table*}[htb]
+	\caption{COG test set accuracies for SAMNet \& COG models. Below `paper' denotes results from~\cite{yang2018dataset} 
+		while `code' denotes results of our experiments using their implementation~\cite{yang2018implement}}
+	\centering
+	\begin{adjustbox}{width=\textwidth}
+		\begin{tabular}{lcccccccccc}
+			\toprule
+			Model & & SAMNet & && && COG&& \\
+			\cmidrule{2-5} \cmidrule{7-11} 
+			&&&&& & paper & ours & ours & paper&\\
+			\cmidrule{7-9} \cmidrule{10-11}
+			Trained on       & canonical & canonical & canonical & hard &           &  canonical  & canonical  & canonical & hard \\ 
+			Fine tuned on  & - & - & hard  & - &           & -   & - & hard & - \\ 
+			Tested on        & canonical & hard & hard & hard &            &canonical  & hard & hard & hard  \\ 
+			\midrule
+			
+			Overall accuracy & 98.0 & 91.6 & 96.5  & 96.1 &           & 97.6  & 65.9 & 78.1& 80.1 \\ 
+			
+			\midrule 
+			
+			AndCompareColor			&	93.5	&	82.7	&	89.2	&	80.6	&	&	81.9	&	57.1	&	60.7	&	51.4	 \\
+			AndCompareShape			&	93.2	&	83.7	&	89.7	&	80.1	&	&	80.0	&	53.1	&	50.3	&	50.7 \\
+			AndSimpleCompareColor		&	99.2	&	85.3	&	97.6	&	99.4	&	&	99.7	&	53.4	&	77.1	&	78.2 \\
+			AndSimpleCompareShape		&	99.2	&	85.8	&	97.6	&	99.2	&	&	100.0	&	56.7	&	79.3	&	77.9 \\
+			CompareColor			&	98.1	&	89.3	&	95.9	&	99.7	&	&	99.2	&	56.1	&	67.9	&	50.1 \\
+			CompareShape			&	98.0	&	89.7	&	95.9	&	99.2	&	&	99.4	&	66.8	&	65.4	&	50.5	 \\
+			Exist				&	100.0	&	99.7	&	99.8	&	99.8	&	&	100.0	&	63.5	&	96.1	&	99.3 \\
+			ExistColor			&	100.0	&	99.6	&	99.9	&	99.9	&	&	99.0	&	70.9	&	99	&	89.8 \\
+			ExistColorOf			&	99.9	&	95.5	&	99.7	&	99.8	&	&	99.7	&	51.5	&	76.1	&	73.1 \\
+			ExistColorSpace			&	94.1	&	88.8	&	91.0	&	90.8	&	&	98.9	&	72.8	&	77.3	&	89.2 \\
+			ExistLastColorSameShape		&	99.5	&	99.4	&	99.4	&	98.0	&	&	100.0	&	65.0	&	62.5	&	50.4 \\
+			ExistLastObjectSameObject	&	97.3	&	97.5	&	97.7	&	97.5	&	&	98.0	&	77.5	&	61.7	&	60.2 \\
+			ExistLastShapeSameColor		&	98.2	&	98.5	&	98.8	&	97.5	&	&	100.0	&	87.8	&	60.4	&	50.3 \\
+			ExistShape			&	100.0	&	99.5	&	100.0	&	100.0	&	&	100.0	&	77.1	&	98.2	&	92.5 \\
+			ExistShapeOf			&	99.4	&	95.9	&	99.2	&	99.2	&	&	100.0	&	52.7	&	74.7	&	72.70 \\
+			ExistShapeSpace			&	93.4	&	87.5	&	91.1	&	90.5	&	&	97.7	&	70	&	89.8	&	89.80 \\
+			ExistSpace			&	95.3	&	89.7	&	93.2	&	93.3	&	&	98.9	&	71.1	&	88.1	&	92.8 \\
+			GetColor			&	100.0	&	95.8	&	99.9	&	100.0	&	&	100.0	&	71.4	&	83.1	&	97.9 \\
+			GetColorSpace			&	98.0	&	90.0	&	95.0	&	95.4	&	&	98.2	&	71.8	&	73.	&	92.3 \\
+			GetShape			&	100.0	&	97.3	&	99.9	&	99.9	&	&	100.0	&	83.5	&	89.2	&	97.1	 \\
+			GetShapeSpace			&	97.5	&	89.4	&	93.9	&	94.3	&	&	98.1	&	78.7	&	77.3	&	90.3 \\
+			SimpleCompareShape		&	99.9	&	91.4	&	99.7	&	99.9	&	&	100.0	&	67.7	&	96.7	&	99.3 \\
+			SimpleCompareColor		&	100.0	&	91.6	&	99.80	&	99.9	&	&	100.0	&	64.2	&	90.4	&	99.3 \\
+			\bottomrule
+		\end{tabular}
+	\end{adjustbox}
+	\label{tab:all-results}
+\end{table*}
+
+
 \subsection{Complete CLEVR-CoGenT results}
 \label{sec:full-cogent-results}
 
-\begin{table}[ht]
+\begin{table*}[htb]
 	\centering
-
 	\caption{Complete set of results for SAMNet on CLEVR-CoGenT.}\label{tab:CoGenT-results}
 	\begin{adjustbox}{width=0.99\textwidth}
 		\begin{tabular}{c c c c c c c }\toprule
@@ -46,7 +145,7 @@
 			\bottomrule
 		\end{tabular}
 	\end{adjustbox}
-\end{table}
+\end{table*}
 
 %\begin{table}[htb]
 %	\centering
