Several corrections throughout the paper.

--- a/cvpr_submission/paper_main.tex
+++ b/cvpr_submission/paper_main.tex
@@ -115,6 +115,12 @@
 \newcommand{\tsj}[1]{\textcolor{magenta}{TSJ: #1}}
 \newcommand{\vm}[1]{\textcolor{blue}{VM: #1}}
 
+\newcommand{\compresslist}{ % Define a command to reduce spacing within itemize/enumerate environments, this is used right after \begin{enumerate} or \begin{enumerate}
+\setlength{\itemsep}{1pt}
+\setlength{\parskip}{0pt}
+\setlength{\parsep}{0pt}}
+
+
 
 %%%%%%%%%%%%%%%
 
